added kafka producer config and api to add transactions
